# prelude

./: .env.example.dev  .gitignore  .pnp.cjs  .spectral.mjs  .yarnrc.yml  Cargo.toml  README.md  Rocket.toml  package.json  portobello-thunder.json
.cargo/: config
.devcontainer/: devcontainer.json
.stoplight/: styleguide.json
client/: README.md  empty.ts  index.html  package.json  quasar.config.js  tsconfig.json
client/public/: openapi.yml
client/src/: App.vue  vue-global.d.ts
client/src/assets/: README.md
client/src/boot/: keycloak.ts
client/src/components/: HelloWorld.vue  SystemButtonSmall.vue  UnderConstructionLarge.vue  UnderConstructionSmall.vue
client/src/css/: app.scss  quasar.variables.scss
client/src/layouts/: MainLayout.vue
client/src/pages/: AuthorizationTokenPage.vue  CodePage.vue  DashboardPage.vue  DeployPage.vue  DocumentPage.vue  ErrorNotFound.vue  IndexPage.vue  OpenAPIExplorerPage.vue  SearchPage.vue  TicketPage.vue
client/src/router/: routes.ts
client/src/stores/: api.ts  authentication.ts
core/: README.md  package.json
core/api/: openapi.yml  package.json
core/api-bindings-client-rust/: .openapi-generator-ignore  Cargo.toml  README.md
core/api-bindings-client-rust/.openapi-generator/: FILES
core/api-bindings-client-rust/docs/: DefaultApi.md  UserResponse.md
core/api-bindings-client-rust/src/apis/: configuration.rs  default_api.rs
core/api-bindings-client-rust/src/models/: mod.rs  user_response.rs
core/api-bindings-client-typescript-axios/: README.md  api.ts  base.ts  common.ts  configuration.ts  index.ts  package.json
core/api-bindings-client-typescript-fetch/: .eslintrc.js  README.md  integration.test.ts  package.json  runtime.ts  tsconfig.json
core/api-bindings-client-typescript-fetch/.openapi-generator/: FILES
core/api-bindings-client-typescript-fetch/apis/: DefaultApi.ts
core/api-bindings-client-typescript-fetch/models/: ConfigurationEntryItemResponse.ts  ConfigurationEntryItemSetResponse.ts  ConfigurationEntryResponse.ts  ConfigurationEntrySetResponse.ts  ConfigurationEntryUserResponse.ts  ConfigurationKeyResponse.ts  ConfigurationKeySetResponse.ts  ConfigurationTypeResponse.ts  ConfigurationTypeSetResponse.ts  ConfigurationValueResponse.ts  ErrorWithMessageResponse.ts  index.ts
core/api-spec/: README.md  openapi.yml  package.json
core/api-spec/generators/rust-domain/: README.md  pom.xml
core/config-env/: Cargo.toml  README.md
core/config-env/src/: lib.rs
core/db/: Cargo.toml  README.md  package.json
core/db/migration/: Cargo.toml
core/db/migration-common/: Cargo.toml  README.md
core/db/migration-common/src/: iden.rs  lib.rs  table.rs
core/db/migration/src/: lib.rs  m20230211_005205_create_user_table.rs  m20230218_120854_create_configuration_type_reference_table.rs  m20230218_120923_create_configuration_key_reference_table.rs  m20230218_120923_create_configuration_reference_table.rs  m20230219_142203_create_configuration_entries_table.rs  m20230219_142203_create_configuration_table.rs  main.rs
core/db/scripts/: GenerateEntities.bash  MigrateDatabase.bash  README.md
core/db/src/: configuration.rs  lib.rs  queries.rs  seeding.rs  testing.rs
core/db/src/entities/: configuration.rs  configuration_entries.rs  configuration_entries_audit.rs  configuration_key_reference.rs  configuration_key_reference_audit.rs  configuration_reference.rs  configuration_type_reference.rs  configuration_type_reference_audit.rs  mod.rs  prelude.rs  user.rs
core/db/src/queries/: configuration.rs
core/db/tests/: integration_tests.rs  test_auditing.rs  test_configuration.rs  test_connection.rs
core/domain-api/: Cargo.toml  README.md
core/domain-api/src/: configuration.rs  lib.rs  user.rs
core/domain-common/: Cargo.toml
core/domain-common/src/: lib.rs
core/domain-db/: Cargo.toml
core/domain-db/src/: configuration_entry.rs  configuration_entry_item.rs  configuration_entry_user.rs  configuration_key.rs  configuration_type.rs  configuration_value.rs  constants.rs  lib.rs
core/server-routes/: Cargo.toml  README.md
core/server-routes/src/: authorization.rs  configuration.rs  lib.rs  user.rs
core/server-routes/src/configuration/: keys.rs  types.rs
core/server-routes/tests/: configuration_integration.rs  configuration_keys_integration.rs  configuration_types_integration.rs
docker/: Dockerfile.dev  README.md  docker-compose.dev.yml
docker/keycloak-import/: realm-export.json
docker/pgadmin4/: servers.json
docker/postgres-initdb.d/: RecreateDatabases.bash  create_databases.bash
docs/: Contributing.md  Installation.md  PortMap.md
portobello-client/: package.json
scripts/: CheckForLicenseBlurb.py  CheckForUpdates.py  README.md  TerminalPrelude.bash
server/: Cargo.toml  README.md  package.json
server/src/: main.rs
tmp/: index.html
tmp/docs/: index.html
tmp/docs/models/: ConfigurationEntryResponse.html  ConfigurationEntryUserResponse.html  ConfigurationKeyResponse.html  ConfigurationKeySetResponse.html  ConfigurationTypeResponse.html  ConfigurationTypeSetResponse.html  ConfigurationValueResponse.html  ErrorWithMessageResponse.html
tmp/docs/operations/: DefaultApi.html
utilities/: README.md  package.json
utilities/db-seed/: Cargo.toml  README.md  package.json
utilities/db-seed/src/: main.rs
(+2 files in other folders)
